Fix spacing on about section

--- a/src/about/About.sass
+++ b/src/about/About.sass
@@ -1,4 +1,12 @@
+.about
+  margin: 0
+  display: flex
+  flex-flow: column wrap
+  align-items: center
+  justify-content: start
+
 .window
+  margin: 0
   max-width: 85vw
   border-radius: 10px
   border: 4px solid #281b66
