--- a/src/main.sass
+++ b/src/main.sass
@@ -11,7 +11,7 @@
 body
   margin: 0
   width: 100%
-  height: 100lvh
+  height: 100dvh
   background-color: #160f38
   overflow: hidden
 
